// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests should render BasicProgressBar 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
}

.emotion-2 {
  width: 24px;
  height: 12px;
  border-radius: 4px;
  background-color: #4caf50;
}

.emotion-9 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1.66;
  letter-spacing: 0.03333em;
  color: rgba(0, 0, 0, 0.87);
}

<div
    class="MuiBox-root emotion-0"
  >
    <div
      class="MuiGrid-root emotion-1"
    >
      <div
        class="MuiBox-root emotion-2"
      />
      <div
        class="MuiBox-root emotion-2"
      />
      <div
        class="MuiBox-root emotion-2"
      />
      <div
        class="MuiBox-root emotion-2"
      />
      <div
        class="MuiBox-root emotion-2"
      />
      <div
        class="MuiBox-root emotion-2"
      />
      <div
        class="MuiBox-root emotion-2"
      />
    </div>
    <span
      class="MuiTypography-root MuiTypography-caption emotion-9"
    >
      You cared for 7 patients
    </span>
  </div>
</DocumentFragment>
`;

exports[`Snapshot tests should render NoTextProgressBar 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
}

.emotion-2 {
  width: 24px;
  height: 12px;
  border-radius: 4px;
  background-color: #4caf50;
}

<div
    class="MuiBox-root emotion-0"
  >
    <div
      class="MuiGrid-root emotion-1"
    >
      <div
        class="MuiBox-root emotion-2"
      />
      <div
        class="MuiBox-root emotion-2"
      />
      <div
        class="MuiBox-root emotion-2"
      />
      <div
        class="MuiBox-root emotion-2"
      />
      <div
        class="MuiBox-root emotion-2"
      />
      <div
        class="MuiBox-root emotion-2"
      />
      <div
        class="MuiBox-root emotion-2"
      />
    </div>
  </div>
</DocumentFragment>
`;
